--- a/admin/package.json
+++ b/admin/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
+    "axios": "^1.13.5",
     "framer-motion": "^12.33.0",
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18"
