--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
+    "react-hot-toast": "^2.6.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
